--- a/views/new.erb
+++ b/views/new.erb
@@ -1,6 +1,8 @@
 <h1>Add new Post</h1>
-<form>
-  <textarea class="form-control" rows="6"></textarea>
+<p>
+<form action="/new" method="POST">
+  <textarea class="form-control" style="width: 800px" rows="6" placeholder="type post here"name="post"></textarea>
   <br/>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+</p>
