add details wiew

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,4 +3,5 @@
 <p> <%= row['content'] %></p>
   <p> added at: <%= row['created_date'] %></p>
   <br/>
+  <a href="/details/<%= row['id'] %>">comments</a>
 <% end %>
