add textarea to /details/...

--- a/views/details.erb
+++ b/views/details.erb
@@ -3,4 +3,11 @@
   <p> <%= @row['content'] %></p>
   <p> added at: <%= @row['created_date'] %></p>
   <br/>
-
+  <h4>Comments</h4>
+  <p>
+<form action="/details/<%= @row['id'] %>" method="POST">
+  <textarea class="form-control" style="width: 800px" rows="6" placeholder="type comments here"name="post"></textarea>
+  <br/>
+  <button type="submit" class="btn btn-primary">Add comments</button>
+</form>
+  </p>
