--- a/views/layout.erb
+++ b/views/layout.erb
@@ -32,6 +32,7 @@
 			    <ul class="nav navbar-nav">
 			      <li><a href="/">Posts</a></li>
 			      <li><a href="/new">New Post</a></li>
+						<li><a href="/user">User Registration</a></li>
 			    </ul>
 			  </div><!--/.nav-collapse -->
 			</nav>
