--- a/views/user_registration.erb
+++ b/views/user_registration.erb
@@ -1,18 +1,20 @@
-<h1>User Registration:</h1>
+<h2>User Registration:</h2>
 <p> In order to comment one of the posts, make registration</p>
-<p><%= @initials %></p>
+<p style="color:green;"><%= @initials %></p>
 <form action="/user" method="POST" role="form">
 
   <div class="form-group">
-    <label>your name</label>
-    <input name="username" type="text" class="form-control" placeholder="Ваше имя" value="<%= @username %>">
+    <label> Enter your name:</label>
+    <input name="username" type="text" class="form-control" style="width: 250px" placeholder="Ваше имя" value="<%= @username %>">
   </div>
 
   <div class="form-group">
-    <label >Password</label>
-    <input name="password" type="password" class="form-control"  placeholder="Password">
+    <label >Enter your password:</label>
+    <input name="password" type="password" class="form-control" style="width: 250px"  placeholder="Password">
   </div>
 
   <button type="submit" class="btn btn-primary">Записаться</button>
 
 </form>
+<br/>
+<p  >For registered users: <a href="/login">Login</a></p>
